--- a/css/variables.css
+++ b/css/variables.css
@@ -1,9 +1,17 @@
-:root {
-    --color-primario: #14162C;
-    --color-primario--rgba: #191b3fdf;
-    --color-secundario: #9499c3;
-    --color-terciario: #4b4f6e;
-    --color-cuarto: #fff;
-    --color-quinto: #298bfe;
-    --color-sexto: #1a1c48
+:root{
+    --color--one: #14162C;
+    --color--one--rgba: #191b3fdf;
+    --color--two: #accefa;
+    --color--three: #298bfe;
+    --color--four: #e52d2d;
+    --color--five: #ffffff;
+    --color--six: #ffd733;
+
+    --layout-description-container-x: 10px;
+    --layout-description-container-y: 10px;
+}
+
+@font-face {
+    font-family: "Roboto-Regular";
+    src: url(../storage/font/Roboto/Roboto-Regular.ttf);
 }
